fixes Account API route for show, update password, and update email
